Fixed scrolling and layout issues.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -352,6 +352,10 @@ input.ui, .selection.dropdown.ui, button.ui {
 
 /********************* JsonData ********************/
 
+.json-data-accordion-item {
+  position: relative;
+}
+
 .keyset-title {
   display: flex;
   flex-direction: row;
@@ -386,23 +390,31 @@ input.ui, .selection.dropdown.ui, button.ui {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-}
-
-.json-data > .keyset-editor {
-  flex-grow: 0;
-  overflow: auto;
-}
-
-.json-data > .json-data-tabs {
-  flex-grow: 0;
+  position: relative;
 }
 
 .json-data-editor-tab {
-  flex-grow: 1;
   position: absolute;
 }
 
 .json-data-result-tab {
+  overflow: auto;
+}
+
+.json-data .editor {
+  height: 30vh;
+}
+
+/**************************************************/
+
+/********************* Wallet ********************/
+
+/**************************************************/
+
+/********************* ReplGhcjs ********************/
+
+.env-accordion {
+  position: relative;
   overflow: auto;
 }
 
